# hw10_action_demo

.github/workflows/: pylint.yml
proj_dep/: db.sqlite3  manage.py  pyproject.toml  requirements.txt  task.txt
proj_dep/media/staff/profiles/: task.txt
proj_dep/pd_app/: settings.py  urls.py  wsgi.py
proj_dep/projects/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
proj_dep/projects/management/commands/: extractor_1.py  worker_1.py
proj_dep/projects/migrations/: 0001_initial.py  0002_auto_20201108_1206.py  0003_staff_image.py  0004_staff_profile.py  0005_staff_user.py  0006_project_direction.py
proj_dep/projects/templates/projects/: contact_page.html  delete_confirm_project.html  delete_confirm_role.html  delete_confirm_staff.html  edit_create_project.html  edit_create_role.html  edit_create_staff.html  index.html  login.html  projects_detail.html  projects_page.html  register.html  roles_detail.html  roles_page.html  staff.html  staff_detail.html
proj_dep/templates/: base.html
proj_dep/tests/: test_proj_dep.py
